-- liquibase formatted sql

-- changeset http3ac3:initial-tables dbms:postgresql
CREATE TABLE placement (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(255) NOT NULL UNIQUE
);

CREATE TABLE category (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE subcategory (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(100) NOT NULL UNIQUE,
    category_id BIGINT NOT NULL REFERENCES category (id) ON DELETE CASCADE
);

CREATE TABLE department (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(255) NOT NULL UNIQUE
);

CREATE TABLE responsible (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    first_name VARCHAR(255) NOT NULL,
    last_name VARCHAR(255) NOT NULL,
    patronymic VARCHAR(255),
    position VARCHAR(255) NOT NULL,
    phone_number VARCHAR(11) NOT NULL UNIQUE,
    is_financially_responsible BOOL NOT NULL,
    department_id BIGINT NOT NULL REFERENCES department (id)
);

CREATE TABLE equipment (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    inventory_number VARCHAR(50) NOT NULL UNIQUE,
    name VARCHAR(255) NOT NULL,
    image_data BYTEA NOT NULL,
    description VARCHAR(255),
    commissioning_date DATE NOT NULL,
    commissioning_act_number VARCHAR(50) NOT NULL,
    decommissioning_date DATE,
    decommissioning_act_number VARCHAR(50),
    responsible_id BIGINT NOT NULL REFERENCES responsible (id),
    subcategory_id BIGINT NOT NULL REFERENCES subcategory (id),
    placement_id BIGINT NOT NULL REFERENCES placement (id)
);

CREATE TABLE rent (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    create_date TIMESTAMP NOT NULL,
    end_date TIMESTAMP,
    description VARCHAR(255),
    equipment_id BIGINT NOT NULL REFERENCES equipment (id),
    responsible_id BIGINT NOT NULL REFERENCES responsible (id),
    placement_id BIGINT NOT NULL REFERENCES placement (id)
);

CREATE TABLE users (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    username VARCHAR(50) NOT NULL UNIQUE,
    password VARCHAR(50) NOT NULL CHECK (LENGTH(password) >= 8),
    responsible_id BIGINT UNIQUE REFERENCES responsible (id)
);

CREATE TABLE role (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(20) NOT NULL
);

CREATE TABLE user_role (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id BIGINT NOT NULL REFERENCES users (id),
    role_id BIGINT NOT NULL REFERENCES role (id)
);